refactor(M6-T6.4): Clean up SpringAiToolCallingEngine after decomposition
Post-refactoring cleanup:
- Remove 770 lines of duplicated/extracted logic from main engine
- Update all test imports to use new execution package
- Clean up unused imports across all files
- Remove obsolete helper methods

Main engine now reduced to 468 lines (was 1091 lines, -57.1%)

All 207 tests passing with new architecture.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>